fix: mac docker builds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   gmail-cleaner:
+    platform: linux/amd64
     image: ghcr.io/gururagavendra/gmail-cleaner:latest
     # Option 2: Build locally (uncomment below, comment out image above)
     # build: .
